services&networking/service_clusterip_practice.yaml
apiVersion: v1

kind: Service

metadata:
  name: myapp-service
  labels:
    app: myapp
    type: front-end

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
      app: nginx
      tier: frontend
