services&networking/service_nodeport_practice.yaml
apiVersion: v1

kind: Service

metadata:
  name: myapp-service
  labels:
    app: myapp
    type: front-end

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodeport: 30008
  selector:
      app: nginx
      tier: frontend
